# jdango18.07.24

./: db.sqlite3  pyproject.toml  server.py
_project_/: asgi.py  settings.py  urls.py  views.py  wsgi.py
_project_/static/css/: style.css
_project_/templates/: base.html  navBar.html
_project_/templates/info/: title.html
_project_/templates/users/: index.html  login.html  register.html
apps/book/: apps.py  urls.py  views.py
apps/forum/: forms.py  models.py  urls.py  views.py
apps/forum/migrations/: 0001_initial.py  0002_initial.py
apps/info/: urls.py  views.py
apps/users/: apps.py  forms.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
media/book_content/: Новый_текстовый_документ.txt
media/forum_messages/: Без_названия.jfif
