[tool.poetry]
name = "booc"
version = "1.0.0.1"
description = "'p"
authors = ["EOV <sweet16102019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
dj-static = "^0.0.6"
waitress = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


















































































